fixed swiper on mobile devices.

--- a/app/assets/styles/modules/components/_background-image-section.css
+++ b/app/assets/styles/modules/components/_background-image-section.css
@@ -3,7 +3,7 @@
   position: relative;
 
   &--400pxh {
-    height: 400px;
+    height: 270px;
   }
   &--margin-bottom {
     margin-bottom: 1.6em;
