--- a/app/assets/styles/modules/components/_headline.css
+++ b/app/assets/styles/modules/components/_headline.css
@@ -55,7 +55,10 @@
     }
   }
   &--small {
-    font-size: 1.2rem;
+    font-size: 1rem;
+    @mixin atLarge {
+      font-size: 1.2rem;
+    }
   }
   &--medium {
     font-size: 1.2rem;
