--- a/app/assets/styles/modules/components/_swiper.css
+++ b/app/assets/styles/modules/components/_swiper.css
@@ -1,14 +1,24 @@
 .swiper {
 
   &__image {
-    width: 80px;
-    height: 80px;
     object-fit: cover;
     clip-path: circle();
-    border: 4px solid white;
+    border: solid white;
     border-radius: 50%;
     display: block;
-    margin: 0 auto 1.5em;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: .8em;
+    width: 60px;
+    height: 60px;
+    border-width: 2px;
+    
+    @mixin atLarge {
+      width: 80px;
+      height: 80px;
+      border-width: 3px;
+      margin-bottom: 1.5em;
+    }
   }
 
   &-container {
@@ -18,36 +28,37 @@
     top: 0;
     left: 0;
   }
-
-  &-slide {
-    width: 100%;
-    height: 100%;
+  &-wrapper {
+    @mixin atLarge {
+      position:  relative !important;
+      top: -15px;
+    }
   }
   &-pagination > &-pagination-bullet-active {
     background-color: rgb(247, 247, 247);
   }
-  &-button {
-    transition: all 400ms;
-    opacity: 0;
-  }
   &-button-prev {
-    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23F7F7F7'%2F%3E%3C%2Fsvg%3E") !important;
-    transform: translate(105px, 41px);
+    @mixin atLarge {
+      background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23F7F7F7'%2F%3E%3C%2Fsvg%3E") !important;
+    }
   }
   &-button-next {
-    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23F7F7F7'%2F%3E%3C%2Fsvg%3E") !important;
-    transform: translate(-105px, 41px);
+    @mixin atLarge {
+      background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23F7F7F7'%2F%3E%3C%2Fsvg%3E") !important;
+    }
+  }
+
+  &-button {
+    display: none;
+    @mixin atLarge {
+      display: block;
+      transform: translateY(20px);
+    }
   }
 
   &:hover {
     .swiper-button {
       opacity: 1;
-    }
-    .swiper-button-next {
-      transform: translate(-125px, 38px);
-    }
-    .swiper-button-prev {
-      transform: translate(125px, 38px);
     }
   }
 }
