--- a/app/assets/styles/modules/components/_xy-centered.css
+++ b/app/assets/styles/modules/components/_xy-centered.css
@@ -6,5 +6,6 @@
 
   &--full-width {
     width: 100%;
+    padding: 0 8px;
   }
 }
